unburden-home-dir (0.3.2.5) UNRELEASED; urgency=medium

  * Make Coveralls.io testing the right thing.
  * Add tests for lsof checks, some internal error handling, for emptying
    files and directories and for creating non-existent files.
  * Don't do coverage on tests. Ignore handling of external errors.
  * Fix Moo-based Test::UBH for older versions of Moo.
  * Require at least version 1.30 of libtest-file-perl for dir_exists_ok.
  * Remove unreachable subroutine unknown_element. Yay for coverage tests!
  * Fix broken behaviour upon trailing blank in list file.

 -- Axel Beckert <abe@debian.org>  Sat, 06 Sep 2014 15:41:37 +0200

unburden-home-dir (0.3.2.4) unstable; urgency=medium

  * Fix test suite so it runs with perl elsewhere than /usr/bin/perl
  * Mention quota as usage reason in long package description
  * Add tests to check --version, -h and --help options.
  * Make -h write to STDOUT instead of STDERR as --help does.
  * Use /dev/null as additional empty config file and list to cover -c and
    -l options.
  * Workaround Config::File bug RT#98542, it behaves unexpectedly if given
    an empty configuration file.
  * Switch test suite from using Mouse to using Moo. Update
    build-dependencies accordingly.
  * Switch from Modern::Perl to strict + warnings + 5.010.
    + Drop (build-) dependency on libmodern-perl-perl.
  * Fix some issues found by Perl::Critic:
    + Add missing strictures.
    + Replace bareword file handles with variables.
    + Drop the sole (non-relevant) occurrence of subroutine prototypes.
  * Don't use "has" for calculated attributes in Test::UBH.
  * Remove all shebang line parameters from t/*.t files.
  * Use Travis CI

 -- Axel Beckert <abe@debian.org>  Wed, 03 Sep 2014 23:41:27 +0200

unburden-home-dir (0.3.2.3) unstable; urgency=low

  * Bump Standards-Version to 3.9.5 (no further changes)
  * Use "lsof +D" instead of "find | buffer | xargs lsof".
    + Drop dependencies on "buffer".